--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/BYU-CS-260-Winter-2019/lab-4-andyruwruw#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.4.20",
     "multer": "^1.4.1"
   }
 }
